--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
+RUN pip install gunicorn
 COPY . .
 
-CMD ["python", "main.py"]
+CMD ["gunicorn", "app:app", "-b", "0.0.0.0:6969"]
