added gunicorn to the docker and tried adding websockets

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,9 +2,8 @@ FROM python:3.9-slim-buster
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install gunicorn
 COPY . .
 
-CMD ["gunicorn", "--worker-class", "eventlet", "-w", "8", "module:app"]
+RUN pip install --no-cache-dir -r requirements.txt
+
+CMD ["gunicorn", "-w", "1", "--threads", "100", "--bind", "0.0.0.0:6969", "app:app"]
