updated the docker file (it might also work!)

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,20 @@
-FROM python:3.9-slim-buster
+# Use the official Python image as the base image
+FROM python:3.9-slim
 
+# Set the working directory in the container
 WORKDIR /app
 
-COPY . .
+# Copy the requirements file into the container
+COPY requirements.txt .
 
+# Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["gunicorn", "-w", "1", "--threads", "100", "--bind", "0.0.0.0:6969", "app:app"]
+# Copy the application code into the container
+COPY . .
+
+# Expose port 8000 for the Flask application
+EXPOSE 8000
+
+# Start the Flask application
+CMD ["python", "app.py"]
