--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,17 +1,14 @@
-version: "3.9"
-
+version: '3'
 services:
-  flask:
-    build: .
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - 8000:8000
     depends_on:
       - redis
-    environment:
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-
   redis:
-    image: redis:6-alpine
+    image: redis
     ports:
-      - "6379:6379"
+      - 6379:6379
